# Hive_FinalWork

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  Resources.qrc  Resources.qrc_bak  Resources.rcc  main.cpp  main.qmodel  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenemanager.cpp  scenemanager.h  technical_analysis.md
Playing/: aiplayer.cpp  aiplayer.h  availablecellwidget.cpp  availablecellwidget.h  availablecellwidget.ui  board.cpp  board.h  cell.cpp  cell.h  game.cpp  game.h  piece.cpp  piece.h  pieceinterface.h  pieces.cpp  pieces.h  pieces_add.cpp  pieces_add.h  piecewidget.cpp  piecewidget.h  piecewidget.ui  player.cpp  player.h  plugpiece.cpp  plugpiece.h  position.cpp  position.h  testwidget.cpp  testwidget.ui
Playing/Pieces/: beetle.cpp  beetle.h  queenbee.cpp  queenbee.h
Scenes/: playing.cpp  playing.h  playing.ui  startscene.cpp  startscene.h  startscene.ui
Scenes/extensions/: centeredscrollarea.cpp  centeredscrollarea.h  hexagonlayout.cpp  hexagonlayout.h
TextureProjects/: available_cell.psd  piece_background_unselected.psd  piece_img.psd
